--- a/index.html
+++ b/index.html
@@ -8,9 +8,11 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,400italic">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="shortcut icon" href="/static/img/favicon.png">
+    <link rel="stylesheet" href="/static/rating-control.css">
 </head>
 <body>
 <div id="app"></div>
+<script src="/static/rating-control.js"></script>
 <!-- built files will be auto injected -->
 </body>
 </html>
