--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>template-front</title>
 
+    <link rel="stylesheet" href="https://cdn.yunser.com/libs/yunser-ui-vue/0.1.25/yunser-ui.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,400italic">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="shortcut icon" href="/static/img/favicon.png">
@@ -12,6 +13,9 @@
 </head>
 <body>
 <div id="app"></div>
+<script src="https://cdn.bootcss.com/vue/2.5.13/vue.min.js"></script>
+<script src="https://cdn.bootcss.com/vue-router/3.0.1/vue-router.min.js"></script>
+<script src="https://cdn.yunser.com/libs/yunser-ui-vue/0.1.25/yunser-ui.js"></script>
 <script src="/static/rating-control.js"></script>
 <!-- built files will be auto injected -->
 </body>
